    is referenced by parent objects via many-to-one,
    without the parent's foreign key value getting
    temporarily set to None - this was a function
    of the "detect primary key switch" flush handler.
    It now ignores objects that are no longer 
    in the "persistent" state, and the parent's 
    foreign key identifier is left unaffected.
    
- sql
  - The warning emitted by the Unicode and String types
    with convert_unicode=True no longer embeds the actual
    value passed.   This so that the Python warning
    registry does not continue to grow in size, the warning
    is emitted once as per the warning filter settings, 
    and large string values don't pollute the output.
    [ticket:1822]
    
  - Fixed bug in Enum type which blew away native_enum
    flag when used with TypeDecorators or other adaption
    scenarios.

  - Inspector hits bind.connect() when invoked to ensure
    initialize has been called.  the internal name ".conn"
    is changed to ".bind", since that's what it is.
    
  - Modified the internals of "column annotation" such that
    a custom Column subclass can safely override
    _constructor to return Column, for the purposes of 
    making "configurational" column classes that aren't 
    involved in proxying, etc.

  - Column.copy() takes along the "unique" attribute
    among others, fixes [ticket:1829] regarding declarative
    mixins
    
- firebird
  - Fixed incorrect signature in do_execute(), error 
    introduced in 0.6.1. [ticket:1823]

- documentation
  - Added documentation for the Inspector. [ticket:1820]
  
0.6.1
=====
- orm
  - Fixed regression introduced in 0.6.0 involving improper
    history accounting on mutable attributes.  [ticket:1782]
  
  - Fixed regression introduced in 0.6.0 unit of work refactor
    that broke updates for bi-directional relationship()
    with post_update=True. [ticket:1807]
    
  - session.merge() will not expire attributes on the returned